# c-c-

./: .gitignore  CMakeLists.txt  FactoryMethod.h  README.md  main.cpp
FactoryMethod/: FactoryMethod.h
Singelton/: Singelton.h
Utilities/: Exceptions.h  Utility.h
data-structures/: Queue.cpp  a.out  stack.cpp
